--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,9 @@
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 header{
     padding: 35px;
     background-color: rgb(112, 150, 255);
@@ -50,6 +56,7 @@ nav ul li a:hover {
     border-radius: 8px;
     border:5px solid  rgb(24, 42, 64);
     max-width: fit-content;
+ 
 }
 
 main {
@@ -118,11 +125,11 @@ h3{
 
 body {
 
+    font-family: 'Anton', sans-serif;
     background-image: url("resource/bc4k.jpg");
     background-size: cover;
-    background-repeat: repeat-x;
-    animation: moveBackground 150s infinite linear;
     min-height: 100vh;
+    color: white;
 }
 
 @keyframes moveBackground {
@@ -225,6 +232,65 @@ body {
  
 .icon-facebook{
     -webkit-text-stroke: none;
+}
+
+main {
+    padding: 40px;
+    max-width: 800px;
+    margin: auto;
+    text-align: center;
+}
+
+.about h1, .about h2 {
+    font-family: 'Anton', sans-serif;
+    color: white;
+    font-size: 35px;
+    -webkit-text-stroke: 1px #333;
+}
+
+.about video {
+    border-radius: 10px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    max-width: 640px;
+    height: auto;
+    margin: 20px 0;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    color: rgb(165, 198, 199);
+}
+
+.info img {
+    border: 5px solid rgb(24, 42, 64);
+    border-radius: 10px;
+}
+
+.details p {
+    font-size: 20px;
+    -webkit-text-stroke: 0.5px #333;
+}
+
+
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    header {
+        font-size: 40px;
+    }
+    nav ul li a {
+        font-size: 1.2em;
+    }
+    .about video {
+        width: 100%;
+    }
+    .info {
+        flex-direction: column;
+    }
 }
 
 <!---->
