--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -130,6 +129,10 @@ body {
     background-size: cover;
     min-height: 100vh;
     color: white;
+    background-position: center;
+    
+    justify-content: center;
+    align-items: center;
 }
 
 @keyframes moveBackground {
@@ -235,10 +238,19 @@ body {
 }
 
 main {
-    padding: 40px;
+    padding: 20px;
     max-width: 800px;
     margin: auto;
     text-align: center;
+    color: white;
+    font-family: 'Arial', sans-serif;
+}
+
+/* จัดตำแหน่งและรูปแบบของ section */
+.about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .about h1, .about h2 {
@@ -246,6 +258,7 @@ main {
     color: white;
     font-size: 35px;
     -webkit-text-stroke: 1px #333;
+    margin: 10px 0;
 }
 
 .about video {
@@ -257,24 +270,41 @@ main {
     margin: 20px 0;
 }
 
+/* ตั้งค่า Flexbox ให้ info section */
 .info {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
     gap: 20px;
     color: rgb(165, 198, 199);
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
 }
 
 .info img {
     border: 5px solid rgb(24, 42, 64);
     border-radius: 10px;
+    width: 300px;
+    height: auto;
+}
+
+.details {
+    text-align: left;
+    max-width: 400px;
+}
+
+.details h2 {
+    font-size: 28px;
+    margin-bottom: 10px;
 }
 
 .details p {
-    font-size: 20px;
-    -webkit-text-stroke: 0.5px #333;
+    font-family: "Anton", sans-serif;
+    color: white;
+    -webkit-text-stroke: 1px #333;
+    font-size: 35px;
+    width: 125%;
 }
-
 
 
 /* Responsive Design */
@@ -292,251 +322,3 @@ main {
         flex-direction: column;
     }
 }
-
-<!---->
-
-h4{
-    padding-left: none px;
-    font-family: "Anton", sans-serif;
-    color: white;
-    -webkit-text-stroke: 1px #333;
-    font-size: 60px;
-    width: 200%;
-    margin-right:none px;
-    padding-right: 30px;
-}
-
-p{
-    padding-left: 50px;
-    font-family: "Anton", sans-serif;
-    color: white;
-    -webkit-text-stroke: 1.25px #0e0d0d;
-    font-size: 25px;
-    width: 90%;
-    border:5px solid rgb(60, 98, 113);
-    border-radius: 10px;
-    max-width: fit-content;
-    padding-right: 50px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    float: none;
-    margin-bottom: 50px;
-    clear: both;
-}
-.pic{
-    max-width: none;
-    border-radius: none ;
-    float:left;
-    border:none solid rgb(234, 239, 245);
-    margin-right: 50px;
-    padding-bottom: none;
-    margin-bottom: 150px;
-    
-    
-}
-
-h5{
-    padding-left: 120px;
-    font-family: "Anton", sans-serif;
-    color: rgb(165, 198, 199);
-    -webkit-text-stroke: 0.5px #090909;
-    font-size: 35px;
-    width: 200%;
-    padding-bottom: 200px;
-}
-
-<!---->
-
-h6{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
-    font-size: 20px;
-}
-
-h7{
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-list-style: none;
-padding: 0;
-margin: 5px;
-
-}
-
-h8{
-    padding-left: 1px;
-    font-family: "Anton", sans-serif;
-    color: rgb(165, 198, 199);
-    -webkit-text-stroke: 1px #090909;
-    font-size: 35px;
-    width: 200%;
-    padding-bottom: 200px;
-    float : left;
-    
-    
-}
-
-h9{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
-    font-size: 20px;
-}
-
-h10{
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-list-style: none;
-padding: 0;
-margin: 5px;
-
-}
-
-
-.skill{
-    background: linear-gradient(135deg, rgb(25, 34, 39)0%, rgb(54, 84, 96)100%);
-    text-transform: uppercase;
-    width: 500px;
-    margin: left auto;
-    margin-right: auto;
-    color: #fff;
-    padding: 20px;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-    list-style: none;
-    float: none;
-    
-    
-}
-.skill li{
-    margin: 20px 0;
-    padding: 10px;
-}
-.bar{
-    background: #353b48;
-    display: block;
-    height: 20px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    overflow:hidden;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-}
-.bar:hover{
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-.bar span{
-    height: 20px;
-    float: left;
-    background: linear-gradient(135deg, rgb(112, 158, 183)0%, rgb(57, 85, 96)100%);
-}
-.HTML{
-    width: 15%;
-    animation: HTML 6s;
-}
-.CSS{
-    width: 15%;
-    animation: CSS 6s;
-}
-.C{
-    width: 5%;
-    animation: C 6s;
-}
-@keyframes HTML{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width: 15;
-    }
-}
-@keyframes CSS{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width: 15%;
-    }
-}
-@keyframes C{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width: 5%;
-    }
-}
-
-<!---->
-
-
-
-
-.skilll{
-    background: linear-gradient(135deg, rgb(25, 34, 39)0%, rgb(54, 84, 96)100%);
-    text-transform: uppercase;
-    width: 500px;
-    margin: 60px auto;
-    color: #fff;
-    padding: 20px;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-    list-style: none;
-    float:left;
-    
-    
-}
-.skilll li{
-    margin: 20px 0;
-    padding: 10px;
-}
-.bar{
-    background: #353b48;
-    display: block;
-    height: 20px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    overflow:hidden;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-   
-}
-.bar:hover{
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-.bar span{
-    height: 20px;
-    float: left;
-    background: linear-gradient(135deg, rgb(112, 158, 183)0%, rgb(57, 85, 96)100%);
-}
-.HTML2{
-    width: 100%;
-    animation: HTML2 6s;
-}
-.CSS2{
-    width: 100%;
-    animation: CSS2 6s;
-}
-.C2{
-    width: 100%;
-    animation: C2 6s;
-}
-@keyframes HTML2{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width: 15;
-    }
-}
-@keyframes CSS2{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width: 100%;
-    }
-}
-@keyframes C2{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width: 100%;
-    }
-}
-
