--- a/mystyle.css
+++ b/mystyle.css
@@ -144,6 +144,8 @@ body {
 
 .wrapper {
   display: inline-flex;
+  margin-bottom: 100px;
+  margin-top: 100px;
 }
 .wrapper .icon {
   margin: 0 20px;
@@ -231,6 +233,7 @@ body {
 .wrapper .youtube:hover span,
 .wrapper .youtube:hover .tooltip {
   background: #DE463B;
+  
 }
  
 .icon-facebook{
@@ -251,6 +254,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 100px;
 }
 
 .about h1, .about h2 {
@@ -279,6 +283,7 @@ main {
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    margin-bottom: 100px;
 }
 
 .info img {
@@ -304,6 +309,7 @@ main {
     -webkit-text-stroke: 1px #333;
     font-size: 35px;
     width: 125%;
+    
 }
 
 
