--- a/myfuture.css
+++ b/myfuture.css
@@ -256,3 +256,11 @@ nav ul li a {
 nav ul li a:hover {
     color: #333;
 }
+main {
+    padding: 20px;
+    float: none;
+    width: 45%;
+    padding-top: 20px;
+    height: 40px;
+   
+}
