--- a/mystyle.css
+++ b/mystyle.css
@@ -143,9 +143,12 @@ body {
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
 .wrapper {
-  display: inline-flex;
+  
   margin-bottom: 100px;
   margin-top: 100px;
+  display: inline-flex;
+  justify-content: center;
+  padding-left: 0px;
 }
 .wrapper .icon {
   margin: 0 20px;
@@ -328,3 +331,4 @@ main {
         flex-direction: column;
     }
 }
+
